# sky_warriors_ws

./: .gitignore  dependencies.repos
src/: Readme.md  Sim-Scenario.md
src/cbba_task_allocator/: README.md
src/failsafes/: README.md
src/failsafes/scripts/: failsafe_manager.py  failsafe_monitor_ros2.py  failsafe_tests.py  run_failsafe_tests.py  trigger_failsafe.py
src/skyw_bringup/: startup.sh
src/skyw_bringup/world/: walls.sdf  world.sdf
src/skyw_bringup/world/qr_wall/: model.config  model.sdf
src/skyw_control/: README.md  competiotion_scenarion.md  package.xml
src/skyw_control/include/: Arming.hpp
src/skyw_control/launch/: launch_simulation.py
src/skyw_control/src/: Arming.cpp
src/skyw_detection/: Readme.md  package.xml  setup.cfg  setup.py  sitl_qr_detection_steps.sh
src/skyw_detection/Docs/: Color-Detector.md  QR.md
src/skyw_detection/config/: color_thresholds.yaml
src/skyw_detection/launch/: requirements.launch.py
src/skyw_detection/resource/: skyw_detection
src/skyw_detection/skyw_detection/launch/: detection.launch.py  detection_launch.py  qr_detection.launch.py  requirements.launch.py  swarm_pad_detection.launch.py
src/skyw_detection/skyw_detection/python/: __init__.py  color_detector.py  color_detector_node.py  pad_detection_node.py  pad_tracker_node.py  qr_code_detector_node.py  utils.py
src/skyw_detection/skyw_detection/scripts/: qrcode_detecter.py
src/skyw_interfaces/: CMakeLists.txt  package.xml
src/skyw_interfaces/msg/: AgentState.msg  Award.msg  Bid.msg  LandingPad.msg  LandingPadArray.msg  Task.msg  TaskStatus.msg
src/skyw_simulation/: gz_env.sh  gz_harmonic_multi_spawn.sh  startup.sh
src/skyw_simulation/new-method/: 2_spawn_px4_sitl.sh
src/skyw_simulation/world/: skyw_multi_lz_world.sdf  warehouse1.sdf
src/skyw_swarm/: CMakeLists.txt  Readme.md  demo_formation.sh  package.xml  startup.sh
src/skyw_swarm/launch/: swarm_mission_scenario.launch.py
src/skyw_swarm/skyw_swarm/: mission_sequencer.py  px4_offboard_bridge.py
src/state_manager/: README.md  package.xml  setup.py  summary.md
src/state_manager/launch/: state_manager.launch.xml
src/state_manager/state_manager/: state_manager_node.py
